--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         .radio-option {
             flex: 1;
-            min-width: 150px;
+            min-width: 140px;
         }
 
         .radio-option input[type="radio"] {
@@ -197,11 +197,6 @@
             color: #856404;
         }
 
-        .section-divider {
-            margin: 30px 0;
-            border-bottom: 2px solid #f0f0f0;
-        }
-
         .tabs {
             display: flex;
             flex-wrap: wrap;
@@ -220,7 +215,7 @@
             font-weight: 500;
             transition: all 0.3s;
             flex: 1;
-            min-width: 140px;
+            min-width: 130px;
             text-align: center;
             line-height: 1.4;
         }
@@ -274,10 +269,13 @@
             <!-- 標籤頁導航 -->
             <div class="tabs">
                 <div class="tab active" onclick="switchTab('lung_adeno')">
-                    肺腺癌<br><span style="font-size: 13px; opacity: 0.9;">Lung Adenocarcinoma</span>
+                    肺腺癌<br><span style="font-size: 13px; opacity: 0.9;">Lung Adeno</span>
                 </div>
                 <div class="tab" onclick="switchTab('lung_non_adeno')">
                     肺非腺癌<br><span style="font-size: 13px; opacity: 0.9;">Lung Non-Adeno</span>
+                </div>
+                <div class="tab" onclick="switchTab('sclc')">
+                    小細胞肺癌<br><span style="font-size: 13px; opacity: 0.9;">SCLC</span>
                 </div>
                 <div class="tab" onclick="switchTab('melanoma')">
                     黑色素瘤<br><span style="font-size: 13px; opacity: 0.9;">Melanoma</span>
@@ -286,7 +284,7 @@
                     乳癌<br><span style="font-size: 13px; opacity: 0.9;">Breast Cancer</span>
                 </div>
                 <div class="tab" onclick="switchTab('renal')">
-                    腎細胞癌<br><span style="font-size: 13px; opacity: 0.9;">Renal Cell Carcinoma</span>
+                    腎細胞癌<br><span style="font-size: 13px; opacity: 0.9;">Renal Cell Ca</span>
                 </div>
                 <div class="tab" onclick="switchTab('gi')">
                     消化道癌症<br><span style="font-size: 13px; opacity: 0.9;">GI Cancers</span>
@@ -311,6 +309,16 @@
                     <button type="button" class="reset-btn" onclick="resetForm('lung_non_adeno')">重設</button>
                 </form>
                 <div id="result_lung_non_adeno" class="result-box"></div>
+            </div>
+
+            <!-- 小細胞肺癌 -->
+            <div id="sclc" class="tab-content">
+                <form onsubmit="calculateScore(event, 'sclc')">
+                    <div id="fields_sclc"></div>
+                    <button type="submit" class="btn">計算 DS-GPA 分數</button>
+                    <button type="button" class="reset-btn" onclick="resetForm('sclc')">重設</button>
+                </form>
+                <div id="result_sclc" class="result-box"></div>
             </div>
 
             <!-- 黑色素瘤 -->
@@ -363,80 +371,106 @@
         const formFields = {
             lung_adeno: [
                 { id: 'kps', label: 'KPS 評分', type: 'radio', options: [
-                    { value: '1.0', label: '≥90' },
+                    { value: '1.0', label: '90-100' },
                     { value: '0.5', label: '80' },
-                    { value: '0.0', label: '<80' }
+                    { value: '0.0', label: '≤70' }
                 ]},
                 { id: 'age', label: '年齡', type: 'radio', options: [
                     { value: '0.5', label: '<70' },
                     { value: '0.0', label: '≥70' }
                 ]},
                 { id: 'num_bm', label: '腦轉移數量', type: 'radio', options: [
-                    { value: '1.0', label: '≤4' },
-                    { value: '0.0', label: '>4' }
+                    { value: '0.5', label: '1-4' },
+                    { value: '0.0', label: '≥5' }
                 ]},
                 { id: 'ecm', label: '腦外轉移', type: 'radio', options: [
-                    { value: '1.0', label: '無' },
-                    { value: '0.0', label: '有' }
+                    { value: '1.0', label: '無 (Absent)' },
+                    { value: '0.0', label: '有 (Present)' }
                 ]},
-                { id: 'gene', label: 'EGFR 或 ALK 陽性', type: 'radio', options: [
-                    { value: '1.0', label: '是' },
-                    { value: '0.0', label: '否/未知' }
+                { id: 'gene', label: 'EGFR/ALK 狀態', type: 'radio', options: [
+                    { value: '0.5', label: 'Either Positive' },
+                    { value: '0.0', label: 'Both Neg/Unknown' }
+                ]},
+                { id: 'pdl1', label: 'PD-L1 Expression', type: 'radio', options: [
+                    { value: '0.5', label: '≥1%' },
+                    { value: '0.0', label: 'Neg/Unknown' }
                 ]}
             ],
             lung_non_adeno: [
                 { id: 'kps', label: 'KPS 評分', type: 'radio', options: [
-                    { value: '1.0', label: '≥90' },
-                    { value: '0.5', label: '80' },
-                    { value: '0.0', label: '<80' }
+                    { value: '2.0', label: '90-100' },
+                    { value: '1.5', label: '80' },
+                    { value: '1.0', label: '70' },
+                    { value: '0.0', label: '≤60' }
                 ]},
                 { id: 'age', label: '年齡', type: 'radio', options: [
                     { value: '0.5', label: '<70' },
                     { value: '0.0', label: '≥70' }
                 ]},
                 { id: 'num_bm', label: '腦轉移數量', type: 'radio', options: [
-                    { value: '1.0', label: '≤4' },
-                    { value: '0.0', label: '>4' }
+                    { value: '0.5', label: '1-4' },
+                    { value: '0.0', label: '≥5' }
                 ]},
                 { id: 'ecm', label: '腦外轉移', type: 'radio', options: [
-                    { value: '1.0', label: '無' },
-                    { value: '0.0', label: '有' }
+                    { value: '1.0', label: '無 (Absent)' },
+                    { value: '0.0', label: '有 (Present)' }
+                ]}
+            ],
+            sclc: [
+                { id: 'kps', label: 'KPS 評分', type: 'radio', options: [
+                    { value: '2.0', label: '100' },
+                    { value: '1.5', label: '90' },
+                    { value: '1.0', label: '80' },
+                    { value: '0.5', label: '70' },
+                    { value: '0.0', label: '≤60' }
+                ]},
+                { id: 'age', label: '年齡', type: 'radio', options: [
+                    { value: '0.5', label: '<75' },
+                    { value: '0.0', label: '≥75' }
+                ]},
+                { id: 'num_bm', label: '腦轉移數量', type: 'radio', options: [
+                    { value: '1.0', label: '1-3' },
+                    { value: '0.5', label: '4-7' },
+                    { value: '0.0', label: '≥8' }
+                ]},
+                { id: 'ecm', label: '腦外轉移', type: 'radio', options: [
+                    { value: '0.5', label: '無 (Absent)' },
+                    { value: '0.0', label: '有 (Present)' }
                 ]}
             ],
             melanoma: [
                 { id: 'kps', label: 'KPS 評分', type: 'radio', options: [
-                    { value: '1.0', label: '≥90' },
+                    { value: '1.0', label: '90-100' },
                     { value: '0.5', label: '70-80' },
-                    { value: '0.0', label: '<70' }
-                ]},
-                { id: 'age', label: '年齡', type: 'radio', options: [
-                    { value: '0.5', label: '<70' },
-                    { value: '0.0', label: '≥70' }
+                    { value: '0.0', label: '60' }
                 ]},
                 { id: 'num_bm', label: '腦轉移數量', type: 'radio', options: [
-                    { value: '1.0', label: '1' },
-                    { value: '0.5', label: '2-4' },
+                    { value: '1.0', label: '1-4' },
                     { value: '0.0', label: '>4' }
                 ]},
                 { id: 'ecm', label: '腦外轉移', type: 'radio', options: [
-                    { value: '1.0', label: '無' },
-                    { value: '0.0', label: '有' }
+                    { value: '1.0', label: '無 (Absent)' },
+                    { value: '0.0', label: '有 (Present)' }
                 ]},
-                { id: 'braf', label: 'BRAF 陽性', type: 'radio', options: [
-                    { value: '1.0', label: '是' },
-                    { value: '0.0', label: '否/未知' }
+                { id: 'ldh', label: 'Serum LDH', type: 'radio', options: [
+                    { value: '0.5', label: '<250' },
+                    { value: '0.0', label: '≥250' }
+                ]},
+                { id: 'ici', label: 'Prior ICI', type: 'radio', options: [
+                    { value: '0.5', label: 'No' },
+                    { value: '0.0', label: 'Yes' }
                 ]}
             ],
             breast: [
-                { id: 'subtype', label: '亞型', type: 'radio', options: [
-                    { value: '1.5', label: 'HER2+ 或 Luminal B' },
-                    { value: '1.0', label: 'Luminal A' },
-                    { value: '0.0', label: 'Basal/三陰性' }
+                { id: 'subtype', label: '腫瘤亞型 (Tumor Subtype)', type: 'radio', options: [
+                    { value: '1.5', label: 'HER2+/Luminal B' },
+                    { value: '0.5', label: 'Luminal A' },
+                    { value: '0.0', label: 'Basal' }
                 ]},
                 { id: 'kps', label: 'KPS 評分', type: 'radio', options: [
-                    { value: '1.0', label: '≥90' },
+                    { value: '1.0', label: '90-100' },
                     { value: '0.5', label: '70-80' },
-                    { value: '0.0', label: '<70' }
+                    { value: '0.0', label: '≤60' }
                 ]},
                 { id: 'age', label: '年齡', type: 'radio', options: [
                     { value: '0.5', label: '<60' },
@@ -447,78 +481,113 @@
                     { value: '0.0', label: '≥2' }
                 ]},
                 { id: 'ecm', label: '腦外轉移', type: 'radio', options: [
-                    { value: '0.5', label: '無' },
-                    { value: '0.0', label: '有' }
+                    { value: '0.5', label: '無 (Absent)' },
+                    { value: '0.0', label: '有 (Present)' }
                 ]}
             ],
             renal: [
                 { id: 'kps', label: 'KPS 評分', type: 'radio', options: [
-                    { value: '2.0', label: '≥90' },
+                    { value: '2.0', label: '90-100' },
                     { value: '1.0', label: '80' },
-                    { value: '0.0', label: '<80' }
+                    { value: '0.0', label: '<70' }
                 ]},
                 { id: 'num_bm', label: '腦轉移數量', type: 'radio', options: [
-                    { value: '1.0', label: '≤4' },
-                    { value: '0.0', label: '>4' }
+                    { value: '0.5', label: '1-4' },
+                    { value: '0.0', label: '≥5' }
                 ]},
                 { id: 'ecm', label: '腦外轉移', type: 'radio', options: [
-                    { value: '1.0', label: '無' },
-                    { value: '0.0', label: '有' }
+                    { value: '0.5', label: '無 (Absent)' },
+                    { value: '0.0', label: '有 (Present)' }
+                ]},
+                { id: 'hgb', label: 'Serum Hemoglobin (g/dL)', type: 'radio', options: [
+                    { value: '1.0', label: '>12.5' },
+                    { value: '0.5', label: '11.1-12.5' },
+                    { value: '0.0', label: '<11.0' }
                 ]}
             ],
             gi: [
                 { id: 'kps', label: 'KPS 評分', type: 'radio', options: [
-                    { value: '2.0', label: '≥90' },
+                    { value: '2.0', label: '90-100' },
                     { value: '1.0', label: '80' },
-                    { value: '0.0', label: '<80' }
+                    { value: '0.0', label: '≤70' }
                 ]},
                 { id: 'age', label: '年齡', type: 'radio', options: [
                     { value: '0.5', label: '<60' },
                     { value: '0.0', label: '≥60' }
                 ]},
                 { id: 'num_bm', label: '腦轉移數量', type: 'radio', options: [
-                    { value: '1.0', label: '1' },
                     { value: '0.5', label: '2-3' },
-                    { value: '0.0', label: '>3' }
+                    { value: '0.0', label: '≥4' }
                 ]},
                 { id: 'ecm', label: '腦外轉移', type: 'radio', options: [
-                    { value: '0.5', label: '無' },
-                    { value: '0.0', label: '有' }
+                    { value: '0.5', label: '無 (Absent)' },
+                    { value: '0.0', label: '有 (Present)' }
                 ]}
             ]
         };
 
         const survivalData = {
             lung_adeno: {
-                3.5: '46-47 個月',
-                2.5: '25-30 個月',
-                1.5: '13-15 個月',
-                0: '6-7 個月'
+                cohort: '17 個月 (6-46)',
+                ranges: {
+                    3.5: '52 個月 (25-69)',
+                    2.5: '30 個月 (12-NR)',
+                    1.5: '15 個月 (5-38)',
+                    0: '6 個月 (2-13)'
+                }
             },
-            lung_non_adeno: '依分數：0.0-1.0 (5個月), 1.5-2.0 (10個月), 2.5-3.0 (13個月)',
+            lung_non_adeno: {
+                cohort: '8 個月 (3-19)',
+                ranges: {
+                    3.5: '19 個月 (8-33)',
+                    2.5: '10 個月 (4-21)',
+                    1.5: '5 個月 (3-12)',
+                    0: '2 個月 (1-4)'
+                }
+            },
+            sclc: {
+                cohort: '10 個月 (5-20)',
+                ranges: {
+                    3.5: '23 個月 (11-NR)',
+                    2.5: '13 個月 (7-23)',
+                    1.5: '8 個月 (4-15)',
+                    0: '4 個月 (2-8)'
+                }
+            },
             melanoma: {
-                3.5: '34 個月',
-                2.5: '16 個月',
-                1.5: '8 個月',
-                0: '5 個月'
+                cohort: '10 個月 (4-26)',
+                ranges: {
+                    2.5: '43 個月 (35-51)',
+                    1.5: '13 個月 (11-15)',
+                    0: '5 個月 (4-6)'
+                }
             },
             breast: {
-                3.5: '36 個月',
-                2.5: '24 個月',
-                1.5: '13 個月',
-                0: '6 個月'
+                cohort: '16 個月 (7-34)',
+                ranges: {
+                    3.5: '36 個月 (18-78)',
+                    2.5: '24 個月 (11-47)',
+                    1.5: '13 個月 (6-27)',
+                    0: '6 個月 (2-12)'
+                }
             },
             renal: {
-                3.5: '35 個月',
-                2.5: '17 個月',
-                1.5: '12 個月',
-                0: '4 個月'
+                cohort: '12 個月 (4-30)',
+                ranges: {
+                    3.5: '35 個月 (13-61)',
+                    2.5: '17 個月 (8-36)',
+                    1.5: '12 個月 (4-25)',
+                    0: '4 個月 (2-8)'
+                }
             },
             gi: {
-                3.5: '17 個月',
-                2.5: '11 個月',
-                1.5: '7 個月',
-                0: '3 個月'
+                cohort: '8 個月 (3-18)',
+                ranges: {
+                    3.5: '17 個月 (9-30)',
+                    2.5: '11 個月 (4-21)',
+                    1.5: '7 個月 (3-17)',
+                    0: '3 個月 (2-8)'
+                }
             }
         };
 
@@ -609,20 +678,25 @@
             const resultDiv = document.getElementById(`result_${cancerType}`);
             let survival = '';
 
-            if (cancerType === 'lung_non_adeno') {
-                survival = survivalData[cancerType];
+            const data = survivalData[cancerType];
+            
+            // 黑色素瘤的分數範圍不同 (最高到 3.0)
+            if (cancerType === 'melanoma') {
+                if (score >= 2.5) survival = data.ranges[2.5];
+                else if (score >= 1.5) survival = data.ranges[1.5];
+                else survival = data.ranges[0];
             } else {
-                const data = survivalData[cancerType];
-                if (score >= 3.5) survival = data[3.5];
-                else if (score >= 2.5) survival = data[2.5];
-                else if (score >= 1.5) survival = data[1.5];
-                else survival = data[0];
+                if (score >= 3.5) survival = data.ranges[3.5];
+                else if (score >= 2.5) survival = data.ranges[2.5];
+                else if (score >= 1.5) survival = data.ranges[1.5];
+                else survival = data.ranges[0];
             }
 
             resultDiv.innerHTML = `
                 <h3>計算結果</h3>
                 <div class="score">DS-GPA 分數：${score.toFixed(1)}/4.0</div>
                 <p><strong>預估中位存活期：</strong>${survival}</p>
+                <p style="font-size: 14px; opacity: 0.9;"><strong>Overall Cohort：</strong>${data.cohort}</p>
             `;
 
             resultDiv.style.display = 'block';
